--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ App:
   MaxPageSize: 100
 External:
   UseBucket: bucketname
+  NetworkID: 19
 Server:
   RunMode: debug
   HttpIp: 0.0.0.0
@@ -71,4 +72,6 @@ Redis:
 Eth:
   Endpoint: "https://node.wallet.unipass.id/polygon-mumbai"
 Chat:
-  Api: "http://192.168.100.250:8000"
+  AppId: "235461af0053efb9"
+  Region: "us"
+  ApiKey: "e50156f5ab1294f3f1f67bf685d1a08e9245eea7"
